--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+anyhow = "1.0"
