--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "common"
 path = "src/libs/lib.rs"
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive","string"] }
 reqwest = "0.11"
 tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
 serde = { version = "1.0", features = ["derive"] }
