--- a/crates/ore_monitor/Cargo.toml
+++ b/crates/ore_monitor/Cargo.toml
@@ -14,7 +14,7 @@ reqwest = "0.11"
 tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 human_bytes="0.4"
 async-trait = "0.1.77"
 zip = "0.6.6"
