--- a/crates/ore_monitor/Cargo.toml
+++ b/crates/ore_monitor/Cargo.toml
@@ -5,16 +5,16 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
-clap = { version = "4", features = ["derive","string"] }
-reqwest = "0.11"
-tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-human_bytes="0.4"
-async-trait = "0.1.77"
-zip = "0.6.6"
-versions = "6.1.0"
 anyhow.workspace = true
-tokio-stream = "0.1"
-ore_monitor_common = { path = "../ore_monitor_common" }
+async-trait.workspace = true
+clap.workspace = true
+chrono.workspace = true
+ore_monitor_common.workspace = true
+human_bytes.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
+tokio-stream.workspace = true
+versions.workspace = true
+zip.workspace = true
